--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,8 @@
 LDFLAGS = -no-undefined
 
-lib_LTLIBRARIES = 
+lib_LTLIBRARIES = libdeck.la
+
+libdeck_la_SOURCES = deck.c
 
 # For every module you create, add libMODULE.la to lib_LTLIBRARIES (#3), where
 # MODULE is the name of the module. Also, replace MODULE in the following line:
