Added build instructions for testing round module

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -8,12 +8,15 @@ echo-cutter:
 
 TESTS = run-test.sh
 
-noinst_LTLIBRARIES = test_deck.la test_team.la
+noinst_LTLIBRARIES = test_deck.la test_team.la test_round.la
 LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libdeck.la \
-                      ${top_builddir}/src/libteam.la
+                      ${top_builddir}/src/libteam.la \
+                      ${top_builddir}/src/libround.la
 
 test_deck_la_SOURCES = test-deck.c
 test_team_la_SOURCES = test-team.c
+test_round_la_SOURCES = test-round.c
+
 
 # For every module you create:
 # - create a file test-MODULE.c, where you will put tests
