--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS = $(CUTTER_CFLAGS) -I$(top_srcdir)/src
+AM_CPPFLAGS = $(CUTTER_CFLAGS) -I$(top_srcdir)/src/libCruceGame
 
 LDFLAGS = -module -rpath $(libdir) -avoid-version -no-undefined
 CFLAGS = -std=c99
@@ -9,7 +9,7 @@ echo-cutter:
 TESTS = run-test.sh
 
 noinst_LTLIBRARIES = test_game.la
-LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libcruceGame.la
+LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGame.la
 
 test_game_la_SOURCES = test-deck.c test-team.c test-round.c
 
