Added asciiGui module

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,4 +1,5 @@
-AM_CPPFLAGS = $(CUTTER_CFLAGS) -I$(top_srcdir)/src/libCruceGame
+AM_CPPFLAGS = $(CUTTER_CFLAGS) -I$(top_srcdir)/src/libCruceGame \
+	                       -I$(top_srcdir)/src/libAsciiGui
 
 LDFLAGS = -module -rpath $(libdir) -avoid-version -no-undefined
 CFLAGS = -std=c99
@@ -8,8 +9,12 @@ echo-cutter:
 
 TESTS = run-test.sh
 
-noinst_LTLIBRARIES = test_game.la
-LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGame.la
+noinst_LTLIBRARIES = test_game.la test-ascii.la
+LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGame.la \
+                      ${top_builddir}/src/libAsciiGui.la
 
-test_game_la_SOURCES = test-deck.c test-team.c test-round.c
+test_game_la_SOURCES = test-deck.c \
+		       test-team.c \
+		       test-round.c
+test_ascii_la_SOURCES = test-output.c
 
