Moved asciiGui to a library and maked a test library for it

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,4 +7,4 @@ lib_LTLIBRARIES = libCruceGame.la libAsciiGui.la
 libCruceGame_la_SOURCES = libCruceGame/deck.c \
 			  libCruceGame/team.c \
 			  libCruceGame/round.c
-libAsciiGui_la_SOURCES = asciiGui/output.c
+libAsciiGui_la_SOURCES =  libAsciiGui/output.c
