Removed test-output

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -9,13 +9,11 @@ echo-cutter:
 
 TESTS = run-test.sh
 
-noinst_LTLIBRARIES = test_game.la test_asciiGui.la
-LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGame.la \
-		      ${top_builddir}/src/libAsciiGui.la
+noinst_LTLIBRARIES = test_game.la
+LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGame.la
 
 
 test_game_la_SOURCES = test-deck.c \
 		       test-team.c \
 		       test-round.c
-test_asciiGui_la_SOURCES = test-output.c
 
