--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,18 +2,14 @@ AM_CPPFLAGS = -I$(top_srcdir)/src/libCruceGame
 LDFLAGS = -no-undefined
 CFLAGS = -std=c99 -Wall
 
-lib_LTLIBRARIES = libCruceGame.la libAsciiGui.la
+lib_LTLIBRARIES = libCruceGame.la
 bin_PROGRAMS = cruceGame
 
-cruceGame_SOURCES = libAsciiGui/main.c
-cruceGame_LDFLAGS = -all-static
-cruceGame_LDADD = libCruceGame.la libAsciiGui.la
+cruceGame_SOURCES = cruceGameCurses/main.c cruceGameCurses/output.c
+cruceGame_LDADD = libCruceGame.la
 cruceGame_LDFLAGS = -lcurses
-
-
 
 libCruceGame_la_SOURCES = libCruceGame/deck.c \
 			  libCruceGame/team.c \
 			  libCruceGame/round.c
-libAsciiGui_la_SOURCES =  libAsciiGui/output.c
 
