--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,4 +5,5 @@ lib_LTLIBRARIES = libCruceGame.la
 
 libCruceGame_la_SOURCES = libCruceGame/deck.c \
 			  libCruceGame/team.c \
-			  libCruceGame/round.c
+			  libCruceGame/round.c \
+                          libCruceGame/game.c
