Changed lcurses to lncursesw

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,7 @@ bin_PROGRAMS = cruceGame
 
 cruceGame_SOURCES = cruceGameCurses/main.c cruceGameCurses/cli.c
 cruceGame_LDADD = libCruceGame.la
-cruceGame_LDFLAGS = -lcurses
+cruceGame_LDFLAGS = -lncursesw
 
 libCruceGame_la_SOURCES = libCruceGame/deck.c \
 			  libCruceGame/team.c \
