Added make instructions for parser module

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,14 +6,15 @@ if DEBUG
 CFLAGS += -g -Wall -DDEBUG
 endif
 
-lib_LTLIBRARIES = libCruceGame.la
+lib_LTLIBRARIES = libCruceGame.la libParser.la
 bin_PROGRAMS = cruceGame
 
 cruceGame_SOURCES = cruceGameCurses/main.c cruceGameCurses/cli.c
-cruceGame_LDADD = libCruceGame.la
+cruceGame_LDADD = libCruceGame.la libParser.la
 cruceGame_LDFLAGS = -lncursesw
 
 libCruceGame_la_SOURCES = libCruceGame/deck.c \
 			  libCruceGame/team.c \
 			  libCruceGame/round.c \
                           libCruceGame/game.c
+libParser_la_SOURCES    = parser/parser.c
