Added make rules for networking module

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS = -I$(top_srcdir)/src/libCruceGame
+AM_CPPFLAGS = -I$(top_srcdir)/src/libCruceGame -I$(top_srcdir)/src/networking
 LDFLAGS = -no-undefined
 CFLAGS += -std=c99
 
@@ -6,15 +6,17 @@ if DEBUG
 CFLAGS += -g -Wall -DDEBUG
 endif
 
-lib_LTLIBRARIES = libCruceGame.la libParser.la
+lib_LTLIBRARIES = libCruceGame.la libNetworking.la
 bin_PROGRAMS = cruceGame
 
-cruceGame_SOURCES = cruceGameCurses/main.c cruceGameCurses/cli.c
-cruceGame_LDADD = libCruceGame.la libParser.la
-cruceGame_LDFLAGS = -lncursesw
+cruceGame_SOURCES = multiplayerCurses/main.c multiplayerCurses/cli.c
+cruceGame_LDADD = libCruceGame.la libNetworking.la
+cruceGame_LDFLAGS = -lncursesw -lpthread
 
 libCruceGame_la_SOURCES = libCruceGame/deck.c \
 			  libCruceGame/team.c \
 			  libCruceGame/round.c \
                           libCruceGame/game.c
-libParser_la_SOURCES    = parser/parser.c
+
+libNetworking_la_SOURCES = networking/network.c
+
