--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,10 +12,9 @@ lib_LTLIBRARIES = libCruceGame.la libNetworking.la libParser.la
 bin_PROGRAMS = cruceGame
 
 cruceGame_SOURCES = multiplayerCurses/multiplayerCurses.c \
-		    multiplayerCurses/cli.c         \
 		    multiplayerCurses/ircHandlers.c \
-		    cruceGameCurses/gameCurses.c \
-		    cruceGameCurses/cli.c \
+		    singlePlayerCurses/singlePlayerCurses.c \
+		    cli/cli.c \
 		    main.c
 
 cruceGame_LDADD = libCruceGame.la libNetworking.la libParser.la
