--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,16 +8,15 @@ if DEBUG
 CFLAGS += -g -Wall -DDEBUG
 endif
 
-lib_LTLIBRARIES = libCruceGame.la libNetworking.la libParser.la
+lib_LTLIBRARIES = libCruceGame.la libNetworking.la libParser.la libCli.la
 bin_PROGRAMS = cruceGame
 
 cruceGame_SOURCES = multiplayerCurses/multiplayerCurses.c \
 		    multiplayerCurses/ircHandlers.c \
 		    singlePlayerCurses/singlePlayerCurses.c \
-		    cli/cli.c \
 		    main.c
 
-cruceGame_LDADD = libCruceGame.la libNetworking.la libParser.la
+cruceGame_LDADD = libCruceGame.la libNetworking.la libParser.la libCli.la
 cruceGame_LDFLAGS = -lncursesw -lpthread
 
 libCruceGame_la_SOURCES = libCruceGame/deck.c \
@@ -28,3 +27,5 @@ libCruceGame_la_SOURCES = libCruceGame/deck.c \
 libNetworking_la_SOURCES = networking/network.c
 
 libParser_la_SOURCES = parser/parser.c
+
+libCli_la_SOURCES = cli/cli.c
