Added test-networking test target

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -11,7 +11,7 @@ echo-cutter:
 
 TESTS = run-test.sh
 
-noinst_LTLIBRARIES = test_game.la
+noinst_LTLIBRARIES = test_game.la test_networking.la
 LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGame.la
 
 test_game_la_SOURCES = test-libCruceGame/test-deck.c \
