Added libNewtorking to test include path

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -12,7 +12,8 @@ echo-cutter:
 TESTS = run-test.sh
 
 noinst_LTLIBRARIES = test_game.la test_networking.la
-LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGame.la
+LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGame.la \
+                      ${top_builddir}/src/libNetworking.la
 
 test_game_la_SOURCES = test-libCruceGame/test-deck.c \
 		       test-libCruceGame/test-team.c \
