--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,17 @@
 *.in
 *.m4
 *.log
+*.dirstamp
+*.deps/
+*.libs/
 config.status
 libtool
 Makefile
 config
 configure
-test/.deps/
-test/.libs/
-src/.deps/
-src/.libs/
-src/libCruceGame/.deps/
-src/libCruceGame/.dirstamp
 src/config.h
 src/stamp-h1
+src/cruceGame
 autom4te.cache/
 test/run-test.sh.trs
 ipch/
