--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,6 +2,7 @@ AM_CPPFLAGS = $(CUTTER_CFLAGS)  -I$(top_srcdir)/src/libCruceGame \
 				-I$(top_srcdir)/src/libAsciiGui \
 				-I$(top_srcdir)/src/networking \
 				-I$(top_srcdir)/src/irc \
+				-I$(top_srcdir)/test/helperFunctions \
 				-DDEBUG
 
 LDFLAGS = -module -rpath $(libdir) -avoid-version -no-undefined
@@ -15,7 +16,8 @@ TESTS = run-test.sh
 noinst_LTLIBRARIES = test_game.la test_networking.la test_irc.la
 LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGame.la \
                       ${top_builddir}/src/libNetworking.la \
-                      ${top_builddir}/src/libIrc.la
+                      ${top_builddir}/src/libIrc.la \
+                      ${top_builddir}/test/helperFunctions/libHelperFunctions.la
 
 test_game_la_SOURCES = test-libCruceGame/test-deck.c \
 		       test-libCruceGame/test-team.c \
