--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ sudo: required
  
 install:
     - curl --silent --location https://raw.github.com/clear-code/cutter/master/data/travis/setup.sh | sh
-  
+    - sudo apt-get update -qq
+    - sudo apt-get install -y tcpflow
+    - sudo apt-get install -y tiemout
+
 script:
     - ./autogen.sh
     - ./configure
