--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
     - curl --silent --location https://raw.github.com/clear-code/cutter/master/data/travis/setup.sh | sh
     - sudo apt-get update -qq
     - sudo apt-get install -y tcpflow
-    - sudo apt-get install -y tiemout
+    - sudo apt-get install -y timeout
 
 script:
     - ./autogen.sh
