--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,8 +5,8 @@ AM_CPPFLAGS = $(CUTTER_CFLAGS)  -I$(top_srcdir)/src/libCruceGame \
 				-I$(top_srcdir)/test/helperFunctions \
 				-DDEBUG
 
-LDFLAGS = -module -rpath $(libdir) -avoid-version -no-undefined
-CFLAGS = -std=c99
+AM_LDFLAGS = -module -rpath $(libdir) -avoid-version -no-undefined
+AM_CFLAGS = -std=c99
 TESTS_ENVIRONMENT = NO_MAKE=yes CUTTER="$(CUTTER)"
 echo-cutter:
 	@echo $(CUTTER)
