--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -14,9 +14,9 @@ echo-cutter:
 TESTS = run-test.sh
 
 noinst_LTLIBRARIES = test_game.la test_networking.la test_irc.la
-LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGame.la \
-                      ${top_builddir}/src/libNetworking.la \
-                      ${top_builddir}/src/libIrc.la \
+LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGameCheck.la \
+                      ${top_builddir}/src/libNetworkingCheck.la \
+                      ${top_builddir}/src/libIrcCheck.la \
                       ${top_builddir}/test/helperFunctions/libHelperFunctions.la
 
 test_game_la_SOURCES = test-libCruceGame/test-deck.c \
