--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -6,7 +6,7 @@ AM_CPPFLAGS = $(CUTTER_CFLAGS)  -I$(top_srcdir)/src/libCruceGame \
 				-DDEBUG
 
 AM_LDFLAGS = -module -rpath $(libdir) -avoid-version -no-undefined
-AM_CFLAGS = -std=c99
+AM_CFLAGS = -std=gnu99
 TESTS_ENVIRONMENT = NO_MAKE=yes CUTTER="$(CUTTER)"
 echo-cutter:
 	@echo $(CUTTER)
@@ -15,7 +15,6 @@ TESTS = run-test.sh
 
 noinst_LTLIBRARIES = test_game.la test_networking.la test_irc.la
 LIBS = $(CUTTER_LIBS) ${top_builddir}/src/libCruceGameCheck.la \
-                      ${top_builddir}/src/libNetworkingCheck.la \
                       ${top_builddir}/src/libIrcCheck.la \
                       ${top_builddir}/test/helperFunctions/libHelperFunctions.la
 
@@ -25,6 +24,8 @@ test_game_la_SOURCES = test-libCruceGame/test-deck.c \
 		       test-libCruceGame/test-game.c
 
 test_networking_la_SOURCES = test-networking/test-network.c
+test_networking_la_LIBADD    = ${top_builddir}/src/libNetworkingCheck.la
 
 test_irc_la_SOURCES = test-irc/test-irc.c
+test_irc_la_LIBADD    = ${top_builddir}/src/libNetworkingMock.la
 
